addeding security fixes and dashboard updates